--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "ios": "react-native run-ios --simulator='iPhone 6s'",
+    "android": "react-native run-android"
   },
   "dependencies": {
     "react": "16.8.3",
-    "react-native": "0.59.9"
+    "react-native": "0.59.9",
+    "react-native-navigation": "^3.0.0-alpha.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
