--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "native-base": "^2.12.1",
     "query-string": "^6.8.1",
     "react": "16.8.3",
     "react-native": "0.59.9",
